--- a/docker_projects/backup/docker-compose.yml
+++ b/docker_projects/backup/docker-compose.yml
@@ -2,17 +2,22 @@ services:
   app:
     build: .
     ports:
-      - "5000:5000"
+      - "5005:5000"
     environment:
       - FLASK_ENV=development
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_NAME=mydatabase
     depends_on:
       - mysql
 
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: mydatabase
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
     ports:
       - "3306:3306"
     volumes:
