--- a/docker_projects/exercise_flask_with_mySQL/docker-compose.yml
+++ b/docker_projects/exercise_flask_with_mySQL/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    build: .
+    image: orelneto/flaskapp_with_db_motogpgif:1.00 
     ports:
       - "5005:5000"
     environment:
